--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,61 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+# Node
+**/node_modules/
 
-# dependencies
-node_modules/
+# Env files
+.env
+.env.*
+**/.env
+**/.env.*
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build output
+dist/
+build/
+.out/
+.next/
+.expo/
+.expo-shared/
+web-build/
+
+# Prisma
+prisma/dev.db
+prisma/dev.db-journal
+prisma/migrations/
 
 # Expo
+*.expo
 .expo/
-dist/
-web-build/
-expo-env.d.ts
+.expo-shared/
+.expo-settings.json
 
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
+# iOS / Android native folders (if generated)
+ios/
+android/
 
-# Metro
-.metro-health-check*
+# VSCode
+.vscode/
+*.code-workspace
 
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
-*.pem
-
-# local env files
-.env*.local
-
-# typescript
+# TypeScript
 *.tsbuildinfo
 
-app-example
+# Others
+.DS_Store
+*.swp
+.cache/
+tmp/
+temp/
+coverage/
+
+# Bun
+.bun/
+
+# SQLite (optional)
+*.sqlite
+*.sqlite-journal
